--- a/index.html
+++ b/index.html
@@ -15,39 +15,45 @@
         <h1>Happy Travels</h1>
         <hr>
         <p>Specializujeme se na exotické destinace a výjimečné zážitkové pobyty. S námi se nikdy nudit nebudete. Ať už chcete zažít pořádný adrenalin nebo se jen opalovat na pláži.</p>
-        <p class="button modry">Chci dobrodružství</p>
-        <p class="button sedy">Raději pohodu na pláži</p>
+        <div class="button">
+            <p class="modry">Chci dobrodružství</p>
+            <p class="sedy">Raději pohodu na pláži</p>
+        </div>
    </header>
    <section class="cestovka">
         <h2>Služby naší cestovní kanceláře</h2>
-        <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.</p>
-        <div class="box">
-            <img src="Images/map-icon.svg" alt="ikona mapy">
-            <p>Naplánujeme zájezdy a výlety do celého světa.</p>
-        </div>
-        <div class="box">
-            <img src="Images/cactus-icon.svg" alt="ikona kaktusu">
-            <p>Zajistíme exotické destinace a zážitkové pobyty.</p>
-        </div>
-        <div class="box">
-            <img src="Images/plane-icon.svg" alt="ikona letadla">
-            <p>Seženeme nejlevnější letenky v daném termínu.</p>
+        <p class="podnadpis">Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.</p>
+        <div class="vedlesebe">
+            <div class="box">
+                <img src="Images/map-icon.svg" alt="ikona mapy">
+                <p>Naplánujeme zájezdy a výlety do celého světa.</p>
+            </div>
+            <div class="box">
+                <img src="Images/cactus-icon.svg" alt="ikona kaktusu">
+                <p>Zajistíme exotické destinace a zážitkové pobyty.</p>
+            </div>
+            <div class="box posledni">
+                <img src="Images/plane-icon.svg" alt="ikona letadla">
+                <p>Seženeme nejlevnější letenky v daném termínu.</p>
+            </div>
         </div>
    </section>
    <section class="delegat">
         <h2>Služby našich delegátů na místě</h2>
-        <p>Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
-        <div class="box">
-            <img src="Images/palm-icon.svg" alt="ikona palmy">
-            <p>Doporučíme ty nejhezčí destinace pro výlety.</p>
-        </div>
-        <div class="box">
-            <img src="Images/umbrella-icon.svg" alt="ikona slunečníku">
-            <p>Objednáme slunečníky a plážová lehátka.</p>
-        </div>
-        <div class="box">
-            <img src="Images/rv-icon.svg" alt="ikona karavanu">
-            <p>Pronajmeme karavan nebo vůz na cestování.</p>
+        <p class="podnadpis">Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
+        <div class="vedlesebe">
+            <div class="box">
+                <img src="Images/palm-icon.svg" alt="ikona palmy">
+                <p>Doporučíme ty nejhezčí destinace pro výlety.</p>
+            </div>
+            <div class="box">
+                <img src="Images/umbrella-icon.svg" alt="ikona slunečníku">
+                <p>Objednáme slunečníky a plážová lehátka.</p>
+            </div>
+            <div class="box posledni">
+                <img src="Images/rv-icon.svg" alt="ikona karavanu">
+                <p>Pronajmeme karavan nebo vůz na cestování.</p>
+            </div>
         </div>
    </section>
 </body>
