přidána desktop verze stránky - úkol dokončen

--- a/index.html
+++ b/index.html
@@ -11,18 +11,24 @@
 </head>
 <body>
    <header>
-        <img src="Images/happy-traveler.svg" alt="velký obrázek štastného cestovatele">
-        <h1>Happy Travels</h1>
-        <hr>
-        <p>Specializujeme se na exotické destinace a výjimečné zážitkové pobyty. S námi se nikdy nudit nebudete. Ať už chcete zažít pořádný adrenalin nebo se jen opalovat na pláži.</p>
-        <div class="button">
-            <p class="modry">Chci dobrodružství</p>
-            <p class="sedy">Raději pohodu na pláži</p>
+        <div class="kontajner">
+            <img src="Images/happy-traveler.svg" alt="velký obrázek štastného cestovatele">
+        </div>
+        <div class="leva">
+            <h1>Happy Travels</h1>
+            <hr>
+            <p>Specializujeme se na exotické destinace a výjimečné zážitkové pobyty. S námi se nikdy nudit nebudete. Ať už chcete zažít pořádný adrenalin nebo se jen opalovat na pláži.</p>
+            <div class="button">
+                <p class="modry">Chci dobrodružství</p>
+                <p class="sedy">Raději pohodu na pláži</p>
+            </div>
         </div>
    </header>
    <section class="cestovka">
-        <h2>Služby naší cestovní kanceláře</h2>
-        <p class="podnadpis">Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.</p>
+        <div class="kontajner1">
+            <h2>Služby naší cestovní kanceláře</h2>
+            <p class="podnadpis">Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.</p>
+        </div>
         <div class="vedlesebe">
             <div class="box">
                 <img src="Images/map-icon.svg" alt="ikona mapy">
@@ -39,9 +45,11 @@
         </div>
    </section>
    <section class="delegat">
-        <h2>Služby našich delegátů na místě</h2>
-        <p class="podnadpis">Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
-        <div class="vedlesebe">
+        <div class="kontajner2">
+            <h2>Služby našich delegátů na místě</h2>
+            <p class="podnadpis">Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
+        </div>
+        <div class="vedlesebe vedlesebe2">
             <div class="box">
                 <img src="Images/palm-icon.svg" alt="ikona palmy">
                 <p>Doporučíme ty nejhezčí destinace pro výlety.</p>
